--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -32,10 +32,6 @@ nav {
   padding: 0;
 }
 
-.nav-links li {
-  margin-left: 20px;
-}
-
 .nav-links a {
   text-decoration: none;
   color: whitesmoke; /* Color for links */
@@ -52,9 +48,12 @@ nav {
   color: whitesmoke;
   border: none;
   padding: 0.5rem 1rem;
-  border-radius: 5px;
+  border-radius: 4px;
   transition: background-color 0.3s ease;
   text-decoration: none;
+  margin-right: 13px;
+  font-size: 15px;
+  cursor: pointer;
 }
 
 .button:hover {
