--- a/react-vite/src/components/ProfilePage/ProfilePage.css
+++ b/react-vite/src/components/ProfilePage/ProfilePage.css
@@ -18,9 +18,11 @@
 }
 
 .profile-info {
+  display: flex;
   border-bottom: 2px solid #eee;
   padding-bottom: 20px;
   margin-bottom: 20px;
+  justify-content: center;
 }
 
 .profile-info p {
