--- a/react-vite/src/components/ProfilePage/ProfilePage.css
+++ b/react-vite/src/components/ProfilePage/ProfilePage.css
@@ -23,11 +23,12 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
   justify-content: center;
+  height: 100px;
 }
 
 .profile-info p {
-  font-size: 16px;
-  line-height: 1.6;
+  font-size: 13px;
+  /* line-height: 1.6; */
   color: #0e8638;
 }
 
@@ -85,6 +86,7 @@
   font-size: 14px;
   cursor: pointer;
   text-align: center;
+
 }
 
 .button:hover {
@@ -121,4 +123,75 @@
   .profile-header h1 {
     font-size: 22px;
   }
+}
+
+
+.input-group {
+  margin-bottom: 20px;
+}
+
+.input-field,
+.textarea-field {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.textarea-field {
+  height: 100px;
+  resize: vertical;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button {
+  background-color: #5cb85c;
+  color: white;
+}
+
+.cancel-button {
+  background-color: #f0ad4e;
+  color: white;
+}
+
+.add-plan-button {
+  margin-top: 20px;
+  background-color: #337ab7;
+  color: white;
+  width: 18%;
+  height: 40px;
+
+}
+
+.form-error {
+  color: red;
+  font-size: 0.9em;
+}
+
+/* Hover effects */
+.button:hover {
+  opacity: 0.8;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+.hidden {
+  display: none;
 }
