--- a/react-vite/src/components/StockDetailPage/StockDetail.css
+++ b/react-vite/src/components/StockDetailPage/StockDetail.css
@@ -110,6 +110,7 @@ body {
     gap: 15px;
     width: 100%;
     justify-content: space-between;
+    color: #0e8e34;
 }
 .list-item {
     background-color: #f9f9f9; /* Light background */
@@ -282,13 +283,34 @@ img {
     margin-bottom: 10px;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    max-width: 900px;
+    word-wrap: break-word;
 }
 
 .note p {
+    display: block;
     margin: 0;
-    color: #333;
+    color: #d72828;
+    max-width: 900px;
+    word-break: break-word;
+}
+.comment {
+    background-color: #fff;
+    padding: 15px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    word-wrap: break-word;
 }
 
+.comment p {
+    display: block;
+    margin: 0;
+    color: #d72828;
+    max-width: 300px;
+    word-break: break-word;
+}
 /* Edit and Delete button styles inside note */
 .note .ed-buttons {
     margin-top: 10px;
@@ -296,7 +318,7 @@ img {
 }
 
 .note .ed-buttons .art-button {
-    background-color: #666;
+    background-color: #188145;
     color: white;
     padding: 5px 10px;
     margin-left: 10px;
@@ -317,4 +339,9 @@ img {
     border-radius: 4px;
     border: 1px solid #ccc;
     resize: vertical;
+}
+
+.error-message {
+    color: red;
+    margin-bottom: 10px;
 }
