--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -4,10 +4,14 @@ body {
 }
 
 .container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 0px;
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  max-width: 1200px;
+  margin: auto;
+  padding: 0px;
 }
+
 
 .heading {
     color: #333;
@@ -49,6 +53,7 @@ body {
 /* Chart Container */
 .chart-container {
     margin: 30px 0;
+    width: 900px;
     width: 100%;
 }
 
@@ -92,4 +97,28 @@ body {
     color: #0a6e2b; /* Blue */
     text-decoration: none;
     margin-bottom: 10px;
+}
+
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #09f;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* Center the spinner */
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Use full viewport height */
 }
