--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -87,6 +87,11 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.home-list-item:hover {
+  background-color: #8dcca2;
+  color: #ffffff
+}
 .home-list-item img {
     max-width: auto;
     height:auto;
@@ -97,6 +102,10 @@ body {
     color: #0a6e2b; /* Blue */
     text-decoration: none;
     margin-bottom: 10px;
+}
+
+.home-list-item a:hover {
+  color: #ffffff;
 }
 
 
