Added Scrolling functionality to stock and articles on Homepage. Added stock content.

--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -25,6 +25,19 @@ body {
     padding: 0;
     margin: 0;
     list-style: none;
+    max-height: 500px;
+    overflow-y: scroll;
+  }
+
+  .stock-list {
+    max-height: 500px;
+    overflow-y: scroll;
+  }
+
+  .stock-container {
+    max-height: 500px;
+    overflow-y: auto;
+    width: 97%; /* Adjust if necessary */
   }
 
   .home-list-item {
