--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -35,10 +35,20 @@ body {
   }
 
   .stock-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-height: 500px;
-    overflow-y: auto;
+    height: 500px; /* Ensures the container height is fixed */
+    overflow-y: hidden;
     width: 97%; /* Adjust if necessary */
-  }
+}
+
+#chart-container-AAPL.chart-container {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 
   .home-list-item {
     width: calc(33.33% - 65px);
